clusters/my-cluster/flux-resources/notification-controller-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-controller-webhook
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
