clusters/my-cluster/flux-resources/notification-webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller
  name: notification-webhook
  namespace: flux-system
spec:
  ports:
  - name: http
    port: 9292
    protocol: TCP
    targetPort: http-webhook
  selector:
    app: notification-controller
  type: ClusterIP
