clusters/my-cluster/flux-resources/flux-webhook-receiver-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
   # cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: webhook.hephy.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: notification-webhook
          servicePort: 9292
  tls:
  - hosts:
    - webhook.hephy.dev
    secretName: webhook-hephy-dev-tls
